fixing project gap issues in design

--- a/src/styles/projets.css
+++ b/src/styles/projets.css
@@ -403,6 +403,14 @@ div.active_projet {
     
 }
 
+@media screen and (min-width:1601px) {
+    .main_content_container{
+        margin-top:3%;
+    }
+    .projet_description{
+        width: 40%;
+    }
+}
 
 @media screen and (max-width:600px){
     h5{
